--- a/.hgignore
+++ b/.hgignore
@@ -7,3 +7,4 @@
 .zip
 COMPARTMENTS/hg38/human_compartment_knowledge_full.tsv
 phosphatases/DEPOD_Hs/DEPOD_201410_human_phosphatases.txt
+List_of_Cluster_of_Differentiation_genes.numbers/
