--- a/.hgignore
+++ b/.hgignore
@@ -2,9 +2,11 @@
 .pdf
 .png
 .xls
+.csv
 .pyc
 .gz
 .zip
 COMPARTMENTS/hg38/human_compartment_knowledge_full.tsv
 phosphatases/DEPOD_Hs/DEPOD_201410_human_phosphatases.txt
 List_of_Cluster_of_Differentiation_genes.numbers/
+rna_binding_proteins/hg38/RNABPDB_huma_data.txt
